fix overflowing text example in widgets

--- a/website/src/css/imports/base.css
+++ b/website/src/css/imports/base.css
@@ -143,6 +143,8 @@ ul {
 pre {
   border-radius: $borderRadius;
   line-height: 1 !important;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .code,
